k8s/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secureinfer
  labels:
    app.kubernetes.io/name: secureinfer
    app.kubernetes.io/component: inference-security
