k8s/local/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: secureinfer-api
  namespace: secureinfer
  labels:
    app: secureinfer-api
spec:
  type: NodePort
  selector:
    app: secureinfer-api
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: secureinfer
  labels:
    app: ollama
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
    - port: 11434
      targetPort: 11434
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: secureinfer
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
